4.x/apps/ppc64le/Calculator-Spring-Boot/basic-op-add/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: add
  name: add
  namespace: <PROJECT>
spec:
  replicas: 1
  selector:
    deploymentconfig: add
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: add
        deploymentconfig: add       
    spec:
      containers:
      - image: <BASICOPADD>
        imagePullPolicy: Always
        name: add
        ports:
        - containerPort: 8001
        resources:         
          requests:
            cpu: 20m
            memory: 50Mi 
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - add
      from:
        kind: ImageStreamTag
        name: add:latest
        namespace: calculator
    type: ImageChange
  - type: ConfigChange
