4.x/apps/ppc64le/Calculator-Spring-Boot/basic-op-add/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-op-add
  namespace: <PROJECT>
  labels:
    app: basic-op-add     
spec:
  type: ClusterIP
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    app: basic-op-add
