4.x/apps/ppc64le/Calculator-Spring-Boot/basic-op-add/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: add
  name: add
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /basicop/add
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: add
    weight: 100
  wildcardPolicy: None
